Recom-8-Ac+SEO+Perf= No img for Text (html/css)

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="La chouette agence aide les entreprises à devenir visible sur internet" src="img/title.png" />
+				<h2 class="bloc2-title">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
+				</h2>
+			<!-- <img alt="La chouette agence aide les entreprises à devenir visible sur internet" src="img/title.png" /> -->
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -153,7 +155,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="Nous travaillons avec beaucoup de clients, voici nos réalisations." src="img/title2.png" />
+				<h2 class="bloc4-title">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+				<!--<img alt="Nous travaillons avec beaucoup de clients, voici nos réalisations." src="img/title2.png" /> -->
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
