--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md tc-black"></span></a>
 						</div>
 					</div>
+				</div>
 				<div class="row">
 					<div class="col-sm-4">
 						Partenaires
@@ -258,7 +259,7 @@
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="matoiture.com">matoiture.com</a></li>
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-							</ul>		
+							</ul>
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 1
